--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head></head>
 <body>
-  <iframe src="https://what-is-zhouyao-doing.streamlit.app/?" stype="height: 100%; width:100%;">
+  <iframe src="https://what-is-zhouyao-doing.streamlit.app/?embed=True" style="height: 100%; width:100%;">
   </iframe>
 </body>
 </html>
